static/sass/_snapcraft_l-application.scss
@mixin snapcraft-l-application {
  .l-application {
    .p-panel__logo {
      margin-top: 0;

      .p-panel__logo-image {
        height: 36px;
        max-width: inherit;
      }

      .logo-text {
        color: var(--vf-color-text-default);
        left: 47px;
        position: absolute;
        top: 0;
      }
    }

    .l-navigation-bar {
      z-index: 200;

      .p-panel__controls {
        padding-top: 0.25rem;
      }
    }

    .l-navigation {
      background-color: #262626;

      .p-panel__content {
        overflow: visible;
      }
    }

    .l-navigation__drawer {
      .p-panel__controls {
        margin-right: -1rem;
        padding-top: 0.5rem;
      }
    }

    .p-side-navigation__label {
      width: 100%;
    }

    .p-muted-heading {
      color: var(--vf-color-text-muted);
    }

    .aside-overlay {
      background-color: rgba(0, 0, 0, 0.25);
      height: 100%;
      left: 0;
      position: fixed;
      top: 0;
      width: 100%;
      z-index: 200;
    }

    .l-aside {
      z-index: 200;
    }

    .l-aside__overlay {
      background-color: rgba(0, 0, 0, 0.25);
      height: 100%;
      position: absolute;
      right: 0;
      top: 0;
      width: 100%;
      z-index: 110;
    }

    .l-status {
      padding: 1rem 0;
    }

    .store-selector {
      margin: $spv--small $spv--large;
      position: relative;

      .p-search-box {
        position: sticky;
        top: 0;
      }
    }

    .store-selector__button {
      background-color: var(--vf-color-background-hover);
      background-image: url("data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 width=%2716%27 height=%2716%27%3E%3Cpath fill=%27%23666%27 d=%27M8.187 11.748l6.187-6.187-1.06-1.061-5.127 5.127L3.061 4.5 2 5.561z%27/%3E%3C/svg%3E");
      background-position: right 0.75rem center;
      background-repeat: no-repeat;
      background-size: 1rem;
      border: 0;
      border-bottom: 1.5px solid var(--vf-color-border-default);
      color: var(--vf-color-text-default);
      cursor: pointer;
      max-width: 100%;
      min-height: 1.5rem;
      overflow: hidden;
      padding: calc(0.4rem - 1px) 2rem calc(0.4rem - 1px) 0.5rem;
      text-align: left;
      text-indent: 0.01px;
      text-overflow: ellipsis;
      white-space: nowrap;
      width: 100%;
    }

    .store-selector__panel {
      background-color: var(--vf-color-background-hover);
      border: 1px solid var(--vf-color-border-default);
      left: 0;
      position: absolute;
      top: 2.3rem;
      width: 100%;
      z-index: 1;
    }

    .store-selector__list {
      margin: 0;
      padding-left: 0;
    }

    .store-selector__item {
      border-bottom: 1px solid var(--vf-color-border-muted);

      &:last-child {
        border-bottom: 0;
      }

      a {
        color: var(--vf-color-text-default);
        display: block;
        overflow: hidden;
        padding: calc(0.4rem - 1px) 0.5rem;
        text-overflow: ellipsis;
        white-space: nowrap;

        &:hover {
          background-color: var(--vf-color-background-default);
          text-decoration: none;
        }
      }
    }
  }

  .l-navigation {
    &.is-collapsed {
      .sidenav-toggle {
        margin-left: $spv--large !important;
        rotate: 180deg;
        width: fit-content;
      }
    }

    @media (min-width: $breakpoint-large) {
      &.is-collapsed {
        .hide-collapsed {
          display: none !important;
        }
      }
    }

    @media (min-width: $breakpoint-small) and (max-width: $breakpoint-large) {
      &:not(.is-pinned, :hover, :focus-within) {
        .hide-collapsed {
          display: none !important;
        }
      }
    }

    .p-panel {
      display: flex;
      flex-direction: column;

      > .p-panel__content {
        display: flex;
        flex-direction: column;
        flex-grow: 1;
        padding-top: 0;
      }
    }

    .p-side-navigation--icons.pin-bottom {
      margin-top: auto;

      .p-side-navigation__list {
        margin-bottom: 0;
      }
    }
  }

  .l-navigation.is-collapsed .sidenav-toggle-wrapper {
    text-align: left;
  }

  @media (width >= 1036px) {
    .l-navigation.is-collapsed {
      transform: translateX(0) !important;
      width: 4rem !important;

      .is-fading-when-collapsed {
        opacity: 0 !important;
        transition-duration: 0.1s !important;
        transition-property: opacity !important;
        transition-timing-function: cubic-bezier(
          0.215,
          0.61,
          0.355,
          1
        ) !important;
      }

      .p-side-navigation__list {
        opacity: 0 !important;
        transition-duration: 0.1s !important;
        transition-property: opacity !important;
        transition-timing-function: cubic-bezier(
          0.215,
          0.61,
          0.355,
          1
        ) !important;
      }

      .p-side-navigation--icons .p-side-navigation__list {
        opacity: 1 !important;
      }
    }
  }

  // Overrides to add separators and hide icons in side nav when collapsed
  .nav-list-separator {
    padding-left: 4rem;
  }

  .p-tooltip--right {
    // show tooltip over sidenav
    z-index: 104;
  }
}

